--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-export DB_HOST=localhost
+#export DB_HOST=localhost
+export DB_HOST=db
 export DB_USERNAME=postgres
 export DB_PASSWORD=mark
 export DB_PORT=5435
